--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-
+  // "homepage": "https://OmarMansy.github.io/bmi-calclutar",
   "name": "bmi-calclutar",
 
   "private": true,
@@ -9,7 +9,8 @@
   "type": "module",
 
   "scripts": {
-
+    // "predeploy":"npm run bulid",
+    // "deploy": "gh-pages -d build",
     "dev": "vite",
 
     "build": "vite build",
@@ -44,7 +45,6 @@
 
     "eslint-plugin-react-refresh": "^0.4.5",
 
-    "gh-pages": "^6.1.1",
 
     "vite": "^5.1.4"
 
